--- a/pages/accomdations/style.css
+++ b/pages/accomdations/style.css
@@ -1,8 +1,10 @@
 @import url("./fonts/fonts.css");
+
 * {
   padding: 0;
   margin: 0;
 }
+
 body,
 html {
   max-width: 100vw;
@@ -18,6 +20,7 @@ html {
   align-content: center;
   flex-direction: column;
 }
+
 /*nav bar*/
 
 .containerg {
@@ -127,6 +130,7 @@ nav.lap .close div::after {
   height: 4px;
   transition: background 0.5s ease;
 }
+
 nav.lap .close div::before {
   transform: rotate(-45deg) translateX(-10px) translateY(-10px);
 }
@@ -145,6 +149,7 @@ nav.lap .close:hover div::after {
     display: none;
   }
 }
+
 @media screen and (min-width: 1000px) {
   .lap {
     display: none;
@@ -163,9 +168,11 @@ li {
   cursor: pointer;
   padding: 0.5%;
 }
+
 #head {
   font-family: "ethnocent";
 }
+
 .singup {
   color: #e5e5e5;
   text-transform: uppercase;
@@ -175,6 +182,7 @@ li {
   font-size: x-large;
   margin-top: 1.5em;
 }
+
 main {
   text-align: center;
   display: flex;
@@ -185,6 +193,7 @@ main {
   margin-left: 10vw;
   margin-right: 10vw;
 }
+
 .content {
   text-transform: uppercase;
   background: transparent;
@@ -197,11 +206,13 @@ main {
   margin: 15px 0;
   color: #e5e5e5;
 }
+
 .inactive {
   display: none;
   padding: 0 !important;
   border: none !important;
 }
+
 .data,
 .bigdata {
   text-align: justify;
@@ -213,52 +224,66 @@ main {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
 @media screen and (max-width: 1000px) {
   .bigdata {
     display: none;
   }
+
   #head {
     margin-top: 15vh;
   }
+
   main {
     margin-top: 5vh;
     flex-direction: column;
   }
+
   .content {
     width: 80vw;
   }
+
   .data {
     font-size: 1.5vh;
-    >div.lvl{
+
+    >div.lvl {
       flex-direction: column;
-      >b{
-      color: aquamarine;
-    }}
-    > b {
+
+      >b {
+        color: aquamarine;
+      }
+    }
+
+    >b {
       color: aquamarine;
     }
-    > div > p {
+
+    >div>p {
       margin: 5%;
       text-align: center;
       justify-content: center;
     }
   }
 }
+
 @media screen and (min-width: 1000px) {
   .data {
     display: none;
   }
+
   #head {
     margin-top: 17.5vh;
   }
+
   .bigdata {
     margin-top: 7.5vh;
     height: 25vh;
 
-    > b {
+    >b {
       color: aquamarine;
     }
   }
+
   main {
     margin-top: 10vh;
     justify-content: space-around;
@@ -347,6 +372,7 @@ nav ul li a {
   color: #fff;
   transition: all 0.5s ease;
 }
+
 nav.laptop ul li a:hover {
   background-color: #fff;
   color: #130c61;
@@ -395,9 +421,10 @@ nav .logo span {
 .fa-solid {
   font-size: xx-large;
 }
+
 /*button*/
 button.btn {
-  width: max(15vw,20vh);
+  width: max(15vw, 20vh);
   max-width: 40vw;
   padding: 0 5%;
   position: relative;
@@ -437,6 +464,7 @@ button.btn::after {
   transition: 0.5s;
   transform-origin: center;
 }
+
 button.register {
   overflow: hidden;
 }
@@ -444,10 +472,17 @@ button.register {
 button.register:hover {
   box-shadow: inset 0px 0px 25px #1479ea;
 }
+
 .btn-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
+}
+
+.morph {
+  @media screen and(max-width:1000px) {
+    flex-direction: column;
+  }
 }
