--- a/pages/merch/merch.css
+++ b/pages/merch/merch.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+@import url("../reach_Us/fonts/fonts.css");
 
 h1 {
   margin-top: 15%;
@@ -12,6 +13,7 @@ h1 {
 }
 
 body {
+  font-family: "Montserrat", sans-serif;
   background-image: url("./finsl.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -19,7 +21,29 @@ body {
   height: 100%;
   margin-bottom: 3%;
   background-color: #17242e;
+  min-height: 100vh;
   opacity: 1;
+  @media screen and (min-width: 960px) {
+    height: 100vh;
+    overflow: hidden;
+  }
+}
+
+h1,
+p {
+  @media screen and (max-width: 960px) {
+    max-width: 80vw;
+    margin: 10vw 10vh;
+  }
+}
+
+h1 {
+  @media screen and (min-width: 960px) {
+    margin-top: 25vh;
+  }
+  @media screen and (max-width: 960px) {
+    margin-top: 20vh;
+  }
 }
 
 .merch-image {
@@ -39,7 +63,8 @@ body {
 }
 
 .tem {
-    width: 30vw;
+  min-height: 50vh;
+  aspect-ratio: 4/2.5;
   @media screen and (max-width: 960px) {
     display: none;
   }
